Collapsed nodes should not shrink #63079

Closed
opened 2019-03-29 10:31:09 +01:00 by William Reynish · 7 comments

Closing nodes by default often makes them too narrow, so that you cannot read the header text. The user must then go through each node and resize it back to a reasonable length.

By default, the node becomes this short:
image.png

Instead, we should not shorten the length of the node, but keep the length the same as when the node was open:
image.png

Closing nodes by default often makes them too narrow, so that you cannot read the header text. The user must then go through each node and resize it back to a reasonable length. By default, the node becomes this short: ![image.png](https://archive.blender.org/developer/F6898029/image.png) Instead, we should not shorten the length of the node, but keep the length the same as when the node was open: ![image.png](https://archive.blender.org/developer/F6898031/image.png)
Added subscribers: @WilliamReynish, @A.Lex_3D, @CharlieJolly, @schweppie, @Hexbob6, @freemind, @PierreSchiller, @SteffenD, @remotecrab131, @Thane5, @orvb, @brezdo, @iss, @0o00o0oo, @ideasman42, @RamiroCantu, @Regnas

Added subscriber: @rjg

Added subscriber: @rjg

This seems to be caused by line 586 in node_draw.c.

node->totr.xmax = locx + 3 * hiddenrad + node->miniwidth;

This causes xmax to be smaller than locx + NODE_WIDTH(node);. I've also noticed that resizing a hidden/closed node doesn't work properly, it only hides the label without shrinking the box.

This seems to be caused by line 586 in `node_draw.c`. ``` node->totr.xmax = locx + 3 * hiddenrad + node->miniwidth; ``` This causes `xmax` to be smaller than `locx + NODE_WIDTH(node);`. I've also noticed that resizing a hidden/closed node doesn't work properly, it only hides the label without shrinking the box.

The resizing of the node is weird in general. Increasing the size of the hidden node also doesn't increase the size of the node when not hidden. Once it's unhidden it returns to the original size.

The resizing of the node is weird in general. Increasing the size of the hidden node also doesn't increase the size of the node when not hidden. Once it's unhidden it returns to the original size.

This issue was referenced by f54db0fa05

This issue was referenced by f54db0fa057e036645f0e635ca849cfb61320ded
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Removed subscriber: @brezdo

Removed subscriber: @brezdo
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63079
No description provided.