UI: Collapsed nodes have the same width as uncollapsed nodes

Fixes T63079.

Differential Revision: https://developer.blender.org/D4617